[package]
name = "mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = "0.32.2" 
r2d2 = "0.8.10"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.130", features = ["derive"] }
url = "2.3.1"